新增swagger 配置
